--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Name: <%= @artist.name %></h1>
 <%= image_tag @artist.image_path %>
+
+<p><%= link_to "Edit this Artist", edit_artist_path(@artist.id) %>
