--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,3 +2,4 @@
 <%= image_tag @artist.image_path %>
 
 <p><%= link_to "Edit this Artist", edit_artist_path(@artist.id) %>
+<p><%= link_to "Delete", artist_path(@artist.id), method: :delete %>
