--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -4,5 +4,12 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
+  <% Song.all.each do |song| -%>
+    <div>
+      <%= check_box_tag(:song_ids, song.id, false, :name => 'playlist[song_ids][]', id: "song-#{song.id}") %>
+      <%= song.title %>
+    </div>
+  <% end %>
+
   <%= f.submit %>
 <% end %>
