--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,3 +1,9 @@
 <h1>Playlists</h1>
 
+<ul>
+<%= @playlists.each do |playlist| %>
+  <li><%= link_to playlist.name, playlist_path(playlist.id) %></li>
+<% end %>
+</ul>
+
 <%= link_to "New playlist", new_playlist_path %>
