--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -6,3 +6,5 @@
   <li><%= link_to "#{song.title}", song_path(song.id) %></li>
 <% end %>
 </ul>
+
+<p><%= link_to "Edit", edit_playlist_path(@playlist.id) %>
