--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -4,7 +4,7 @@
 
   <% Song.all.each do |song| -%>
     <div>
-      <%= check_box_tag(:song_ids, song.id, false, :name => 'playlist[song_ids][]', id: "song-#{song.id}") %>
+      <%= check_box_tag(:song_ids, song.id, @playlist.songs.include?(song), :name => 'playlist[song_ids][]', id: "song-#{song.id}") %>
       <%= song.title %>
     </div>
   <% end %>
