--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,8 +1,3 @@
-<%= form_for(@artist) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :image_path %>
-  <%= f.text_field :image_path %>
+<h1>Edit <%= @artist.name %></h1>
 
-  <%= f.submit %>
-<% end %>
+<%= render partial: "form" %>
