--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,4 +1,3 @@
-<%= form_for(@artist) do |f| %>
   <% if @artist.errors.any? %>
     <h2><%= pluralize(@artist.errors.count, "error") %> prohibited this record from being saved:</h2>
     <ul>
@@ -8,11 +7,6 @@
     </ul>
   <% end %>
 
+<h1>Make a new Artist</h1>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :image_path %>
-  <%= f.text_field :image_path %>
-
-  <%= f.submit %>
-<% end %>
+<%= render partial: "form" %>
