--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -1,14 +1,3 @@
-<%= form_for(@playlist) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<h1>Edit <%= @playlist.name %> Playlist</h1>
 
-  <% Song.all.each do |song| -%>
-    <div>
-      <%= check_box_tag(:song_ids, song.id, @playlist.songs.include?(song), :name => 'playlist[song_ids][]', id: "song-#{song.id}") %>
-      <%= song.title %>
-    </div>
-  <% end %>
-
-  <%= f.submit %>
-
-<% end %>
+<%= render partial: "form" %>
