create partial for error messages and insert into new and create

--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "shared/errors", locals: { target: @playlist } %>
+
 <h1>Edit <%= @playlist.name %> Playlist</h1>
 
 <%= render partial: "form" %>
