--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "shared/errors", locals: { target: @artist } %>
+
 <h1>Edit <%= @artist.name %></h1>
 
 <%= render partial: "form" %>
