--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,11 +1,4 @@
-  <% if @artist.errors.any? %>
-    <h2><%= pluralize(@artist.errors.count, "error") %> prohibited this record from being saved:</h2>
-    <ul>
-      <% @artist.errors.full_messages.each do |message| %>
-        <li id="message"><%= message %></li>
-      <% end %>
-    </ul>
-  <% end %>
+<%= render partial: "shared/errors", locals: { target: @artist } %>
 
 <h1>Make a new Artist</h1>
 
