--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "shared/errors", locals: { target: @playlist } %>
+
 <h1>Make New Playlist</h1>
 
 <%= render partial: "form" %>
