--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "shared/errors", locals: { target: @song } %>
+
 <h1>Make New Song</h1>
 
 <%= form_for [@artist, @song] do |f| %>
